fix next button style on mobile

--- a/src/components/QuestionsArea/QuestionsArea.scss
+++ b/src/components/QuestionsArea/QuestionsArea.scss
@@ -150,6 +150,7 @@
       }
       &__next {
         margin-bottom: 1rem;
+        margin-top: 0;
       }
     }
   }
